<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="playerName"></string>
    <string name="playerWinCount"></string>
    <string name="playerHand"></string>
    <string name="cpuHand"></string>
    <string name="cpuName"></string>
    <string name="cpuWinCount"></string>
    <string name="gameResult"></string>
    <string name="scissorsIcon">Scissors Icon</string>
    <string name="rockIcon">Rock Icon</string>
    <string name="paperIcon">Paper Icon</string>
    <string name="result_activity">Result Activity</string>

</resources>
