<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".GameActivity">

    <ImageButton
        android:id="@+id/scissorsButtonID"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/scissorsIcon"
        android:onClick="onClickScissorsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/paperButtonID"
        app:layout_constraintStart_toStartOf="@+id/resultTextViewID"
        app:layout_constraintTop_toBottomOf="@+id/resultTextViewID"
        app:srcCompat="?android:attr/actionModeCutDrawable" />

    <ImageButton
        android:id="@+id/paperButtonID"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/paperIcon"
        android:onClick="onClickPaperButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultTextViewID"
        app:layout_constraintStart_toStartOf="@+id/resultTextViewID"
        app:layout_constraintTop_toBottomOf="@+id/resultTextViewID"
        app:layout_constraintVertical_bias="0.522"
        app:srcCompat="?android:attr/actionModePasteDrawable" />

    <ImageButton
        android:id="@+id/rockButtonID"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rockIcon"
        android:onClick="onClickRockButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultTextViewID"
        app:layout_constraintStart_toEndOf="@+id/paperButtonID"
        app:layout_constraintTop_toBottomOf="@+id/resultTextViewID"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/resultTextViewID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/gameResult"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playerNameTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/playerName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/playerHandTextViewID"
        app:layout_constraintEnd_toStartOf="@+id/playerWinCountTextViewID"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cpuNameTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cpuName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cpuHandTextViewID"
        app:layout_constraintEnd_toStartOf="@+id/cpuWinCountTextViewID"
        app:layout_constraintStart_toEndOf="@+id/playerWinCountTextViewID" />

    <TextView
        android:id="@+id/playerWinCountTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/playerWinCount"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/playerHandTextViewID"
        app:layout_constraintEnd_toStartOf="@+id/cpuNameTextViewID"
        app:layout_constraintStart_toEndOf="@+id/playerNameTextViewID" />

    <TextView
        android:id="@+id/cpuWinCountTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cpuWinCount"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cpuHandTextViewID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cpuNameTextViewID" />

    <TextView
        android:id="@+id/cpuHandTextViewID"
        android:layout_width="127dp"
        android:layout_height="103dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cpuHand"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/resultTextViewID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerHandTextViewID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerHandTextViewID"
        android:layout_width="127dp"
        android:layout_height="103dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/playerHand"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/resultTextViewID"
        app:layout_constraintEnd_toStartOf="@+id/cpuHandTextViewID"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>